# deepgd

./: .README.md  .gitattributes  .gitignore  GAN(gan=ragan,data=best(xing,stress),dis=deep,share=0,embed=16,gp=0).ipynb  GAN(gan=ragan,data=best(xing,stress),dis=deep,share=10,embed=6,gp=0).ipynb  GAN(gan=ragan,data=best(xing,stress),dis=deep,share=12,embed=4,gp=0).ipynb  GAN(gan=ragan,data=best(xing,stress),dis=deep,share=14,embed=2,gp=0).ipynb  GAN(gan=ragan,data=best(xing,stress),dis=deep,share=16,embed=0,gp=0).ipynb  GAN(gan=ragan,data=best(xing,stress),dis=deep,share=2,embed=14,gp=0).ipynb  GAN(gan=ragan,data=best(xing,stress),dis=deep,share=4,embed=12,gp=0).ipynb  GAN(gan=ragan,data=best(xing,stress),dis=deep,share=6,embed=10,gp=0).ipynb  GAN(gan=ragan,data=best(xing,stress),dis=deep,share=8,embed=8,gp=0).ipynb  GAN(gan=rgan,data=best(xing,random),canon=stress,conv=3,share=6,embed=10).ipynb  GAN(gan=rgan,data=best(xing,random),canon=stress,conv=6,share=3,embed=5).ipynb  GAN(gan=rgan,data=best(xing,stress),canon=stress,share=0,embed=16).ipynb  GAN(gan=rgan,data=best(xing,stress),canon=stress,share=10,embed=6).ipynb  GAN(gan=rgan,data=best(xing,stress),canon=stress,share=12,embed=4).ipynb  GAN(gan=rgan,data=best(xing,stress),canon=stress,share=14,embed=2).ipynb  GAN(gan=rgan,data=best(xing,stress),canon=stress,share=16,embed=0).ipynb  GAN(gan=rgan,data=best(xing,stress),canon=stress,share=2,embed=14).ipynb  GAN(gan=rgan,data=best(xing,stress),canon=stress,share=4,embed=12).ipynb  GAN(gan=rgan,data=best(xing,stress),canon=stress,share=6,embed=10).ipynb  G_list.pickle  (+252 more)
(+16216 files in other folders)
