[tool.poetry]
name = "deepgd"
version = "0.1.0"
description = "DeepGD: A Deep Learning Framework for Graph Drawing Using GNN"
authors = ["Xiaoqi Wang <xiaoqiwang2582@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
numba = "^0.54.0"
llvmlite = "^0.37.0"
tensorboard = "^2.6.0"
networkx = "^2.6.3"
tqdm = "^4.62.2"
pandas = "^1.3.3"
matplotlib = "^3.4.3"
umap-learn = "^0.5.1"
ForceAtlas2 = "^1.0"
Cython = "^0.29.24"
pydot = "^1.4.2"
pynvml = "^11.0.0"
ipywidgets = "^7.6.5"
torch = "^1.9.0"
ipynb = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
